# TwoPlayerGames

./: .clang-format  CMakeLists.txt  LICENSE  README.md
games/: CMakeLists.txt
games/connectfour/: CMakeLists.txt  ConnectFour.cpp  ConnectFour.h
games/connectfour/test/: board-test.cpp  gamestate-test.cpp
games/tictactoe/: CMakeLists.txt  TicTacToe.cpp  TicTacToe.h
games/tictactoe/test/: board-tests.cpp  gamestate-test.cpp
sandbox/: CMakeLists.txt  sandbox.cpp
twoplayergames/: CMakeLists.txt
twoplayergames/include/twoplayergames/: random_selection.h
twoplayergames/include/twoplayergames/agent/: Agent.h  InteractivePlayer.h  MCTSPlayer.h  MinimaxPlayer.h  RandomPlayer.h
twoplayergames/include/twoplayergames/gameplay/: ConsoleGame.h  GameStateEvaluator.h  InvisibleMatch.h  Player.h
